# Commandlinetool

./: Package.resolved  Package.swift  README.md
.swiftpm/xcode/xcshareddata/xcschemes/: CommandLineTool.xcscheme
CommandLineTool.xcodeproj/: project.pbxproj
CommandLineTool.xcodeproj/xcshareddata/xcschemes/: CommandLineTool-Package.xcscheme  CommandLineTool.xcscheme
KZStaticAnalyzer/: CodeQualityControl.py  IncrementQualityControl.py  KZAutoARC.py  README.md
KZStaticAnalyzer/execute/: CompileContext.py  FileProcessor.py  XcodeprojManager.rb  YPOperationQueue.py
KZStaticAnalyzer/install/: BossInstallConfig.json  BossZPConfig.py  NormalConfig.py
KZStaticAnalyzer/others/: kz_img_similarity_detect.py  kz_leak_detect.py  kz_standard_detect.py
KZStaticAnalyzer/source/: CMakeLists.txt  KZCanonicalQuantify.h  KZRecursiveASTVisitor.cpp  KZRecursiveASTVisitor.hpp  KZStaticAnalyzer.cpp  KZStaticAnalyzer.hpp  KZUtility.cpp  KZUtility.hpp
PYModule/: CheckImageSize.py  branch.py  build_img_info.txt  checkLeak.py  check_privacy.py  compressed_images.json  dz_module_scan.py  sp_compress_image.py
Sources/CommandLineTool/: main.swift
Sources/CommandLineToolCore/: CommandLineReleases.swift  CommandLineTool.swift
Sources/SwiftIpaTool/: IpaTool.swift
Tests/CommandLineToolTests/: CommandLineToolTests.swift
